sinalcabo/force-app/main/default/objects/Sistema_Cliente__mdt/Sistema_Cliente__mdt.object-meta.xml
<CustomObject>
    <description>Configuração da ligação a cada sistema do operador: por onde se chama, que janelas se leem, quanto tempo se espera e quanto tempo se guarda a resposta. Configuração estática, versionada. O estado que muda a cada corrida vive no custom setting Estado da integração.</description>
    <label>Sistema do operador</label>
    <pluralLabel>Sistemas do operador</pluralLabel>
</CustomObject>