sinalcabo/force-app/main/default/objects/Sistema_Cliente__mdt/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se esta configuração está em uso. Permite ter mais do que um sistema descrito sem os ligar a todos.</description>
    <inlineHelpText>Desligar aqui não pára a integração: para isso existe o travão de emergência no estado da integração.</inlineHelpText>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>