sinalcabo/force-app/main/default/objects/Sistema_Cliente__mdt/fields/Alcance_Varrimento_Dias__c.field-meta.xml
<CustomField>
    <fullName>Alcance_Varrimento_Dias__c</fullName>
    <description>Até quantos dias para trás o varrimento vai, somando janelas do tamanho do passo.</description>
    <inlineHelpText>45 dias, porque há manutenções que vivem mais de 40 dias abertas na NOS.</inlineHelpText>
    <label>Alcance do varrimento (dias)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>