sinalcabo/force-app/main/default/objects/Sistema_Cliente__mdt/fields/Data_Corte__c.field-meta.xml
<CustomField>
    <fullName>Data_Corte__c</fullName>
    <description>Só entram linhas alteradas nesta data ou depois dela. Serve para não trazer anos de histórico fechado numa importação de ficheiro.</description>
    <inlineHelpText>Deixar vazio traz tudo o que o ficheiro tiver. Na importação do PNI está em 1 de Janeiro de 2026.</inlineHelpText>
    <label>Data de corte</label>
    <type>Date</type>
</CustomField>