sinalcabo/force-app/main/default/objects/Sistema_Cliente__mdt/fields/Detalhes_Por_Transaccao__c.field-meta.xml
<CustomField>
    <fullName>Detalhes_Por_Transaccao__c</fullName>
    <description>Quantas ordens a corrida de detalhe lê de cada vez.</description>
    <inlineHelpText>5 por transacção. Subir aumenta o risco de exceder os limites de tempo da plataforma.</inlineHelpText>
    <label>Detalhes por transacção</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>