sinalcabo/force-app/main/default/objects/Sistema_Cliente__mdt/fields/Email_Despacho__c.field-meta.xml
<CustomField>
    <fullName>Email_Despacho__c</fullName>
    <description>Endereço, ou endereços separados por vírgula, que recebem o aviso de SLA em risco das ordens deste operador. Vazio faz o aviso ir para o dono da ordem, que é quem despacha.</description>
    <inlineHelpText>Deixa vazio enquanto o despacho não tiver um endereço próprio: o aviso vai para o dono da ordem. É aqui que entra a lista de distribuição do despacho no arranque em produção.</inlineHelpText>
    <label>Email do despacho</label>
    <length>255</length>
    <type>Text</type>
</CustomField>