sinalcabo/force-app/main/default/objects/Sistema_Cliente__mdt/fields/Fuso_Horario__c.field-meta.xml
<CustomField>
    <fullName>Fuso_Horario__c</fullName>
    <description>Fuso em que as janelas de leitura são escritas nos parâmetros da API.</description>
    <inlineHelpText>Europe/Lisbon. Foi provado no arranque que a NOS lê as janelas em hora local e não em UTC.</inlineHelpText>
    <label>Fuso horário</label>
    <length>60</length>
    <type>Text</type>
</CustomField>