sinalcabo/force-app/main/default/objects/Sistema_Cliente__mdt/fields/Janela_Abertas_Horas__c.field-meta.xml
<CustomField>
    <fullName>Janela_Abertas_Horas__c</fullName>
    <description>Quantas horas para trás a corrida das ordens abertas pede de cada vez.</description>
    <inlineHelpText>48 horas é o valor de partida. Aumentar recupera ordens antigas, mas cada chamada demora mais.</inlineHelpText>
    <label>Janela de abertas (horas)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>