sinalcabo/force-app/main/default/objects/Sistema_Cliente__mdt/fields/Janela_Fechadas_Horas__c.field-meta.xml
<CustomField>
    <fullName>Janela_Fechadas_Horas__c</fullName>
    <description>Quantas horas para trás a corrida das ordens fechadas pede de cada vez.</description>
    <inlineHelpText>Não passar de 72 horas: acima disso a NOS devolve uma lista vazia em vez de erro.</inlineHelpText>
    <label>Janela de fechadas (horas)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>