sinalcabo/force-app/main/default/objects/Sistema_Cliente__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Nome de API da credencial nomeada por onde a integração chama o sistema. É aqui que vivem o endereço e os segredos.</description>
    <inlineHelpText>Tem de existir em Configuração, Credenciais Nomeadas. Se este nome estiver errado, nenhuma chamada sai.</inlineHelpText>
    <label>Credencial nomeada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>