sinalcabo/force-app/main/default/objects/Sistema_Cliente__mdt/fields/NIF_Conta_Cliente__c.field-meta.xml
<CustomField>
    <fullName>NIF_Conta_Cliente__c</fullName>
    <description>Número de identificação fiscal da conta a que as ordens deste operador ficam ligadas. É por aqui que a integração encontra a conta, porque o nome muda e o NIF não.</description>
    <inlineHelpText>502604751 é o da NOS Comunicações, S.A. A conta tem de existir com este NIF, senão as ordens entram sem conta e fica um aviso no lote.</inlineHelpText>
    <label>NIF da conta do cliente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>