sinalcabo/force-app/main/default/objects/Sistema_Cliente__mdt/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <description>Nome legível do sistema do operador que esta configuração descreve.</description>
    <inlineHelpText>Exemplo: NOS Field Force Management.</inlineHelpText>
    <label>Nome do sistema</label>
    <length>80</length>
    <type>Text</type>
</CustomField>