sinalcabo/force-app/main/default/objects/Sistema_Cliente__mdt/fields/Nome_Conta_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nome_Conta_Cliente__c</fullName>
    <description>Nome exacto da conta, usado só quando nenhuma conta tem o NIF configurado.</description>
    <inlineHelpText>É o plano B da procura pelo NIF. Tem de ser igual ao nome da conta, letra por letra.</inlineHelpText>
    <label>Nome da conta do cliente (recurso)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>