sinalcabo/force-app/main/default/objects/Sistema_Cliente__mdt/fields/Passo_Varrimento_Dias__c.field-meta.xml
<CustomField>
    <fullName>Passo_Varrimento_Dias__c</fullName>
    <description>Largura em dias de cada janela do varrimento de hora a hora.</description>
    <inlineHelpText>7 dias. Janelas mais largas correm o risco de a NOS cortar a resposta ao fim de 60 segundos.</inlineHelpText>
    <label>Passo do varrimento (dias)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>