sinalcabo/force-app/main/default/objects/Sistema_Cliente__mdt/fields/Pedaco_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Pedaco_Bytes__c</fullName>
    <description>Tamanho de cada pedaço em que o ficheiro é cortado antes de ser enviado para processamento. Existe porque um ficheiro inteiro não cabe na memória de uma transacção.</description>
    <inlineHelpText>524288, ou seja meio megabyte, que dá cerca de mil linhas. Baixar se aparecerem erros de memória.</inlineHelpText>
    <label>Tamanho do pedaço (bytes)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>