sinalcabo/force-app/main/default/objects/Sistema_Cliente__mdt/fields/Retencao_Payload_Dias__c.field-meta.xml
<CustomField>
    <fullName>Retencao_Payload_Dias__c</fullName>
    <description>Durante quantos dias a resposta em bruto do operador fica guardada nos lotes com ocorrências.</description>
    <inlineHelpText>30 dias. Passado esse tempo a limpeza apaga a resposta e o lote deixa de poder ser reprocessado.</inlineHelpText>
    <label>Retenção da resposta (dias)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>