sinalcabo/force-app/main/default/objects/Sistema_Cliente__mdt/fields/Timeout_ms__c.field-meta.xml
<CustomField>
    <fullName>Timeout_ms__c</fullName>
    <description>Tempo máximo que a integração espera por uma resposta, em milésimos de segundo.</description>
    <inlineHelpText>120000 é o máximo da plataforma. O gateway da NOS corta primeiro, aos 60 segundos.</inlineHelpText>
    <label>Tempo limite (ms)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>